k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: secret-letter
  labels:
    app.kubernetes.io/part-of: secret-letter
